* разделение по путям admin / user
проверить: пускает всех авторизованных, независимо от эндпоинта?